# plane-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README copy.md  README.md  a2a.json  compose.yml  debug.Dockerfile  fix_api.py  pyproject.toml
plane_agent/: __init__.py  __main__.py  agent.py  agent_server.py  api_client.py  api_wrapper.py  auth.py  graph_config.py  mcp_config.json  mcp_server.py  plane_agent.py  plane_agent.py.bak  plane_models.py  tools.py  utils.py
plane_agent/agent/: IDENTITY.md  templates.py
plane_agent/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
plane_agent/skills/plane-cycles/: SKILL.md
plane_agent/skills/plane-initiatives/: SKILL.md
plane_agent/skills/plane-intake/: SKILL.md
plane_agent/skills/plane-labels/: SKILL.md
plane_agent/skills/plane-modules/: SKILL.md
plane_agent/skills/plane-pages/: SKILL.md
plane_agent/skills/plane-projects/: SKILL.md
plane_agent/skills/plane-states/: SKILL.md
plane_agent/skills/plane-users/: SKILL.md
plane_agent/skills/plane-work-item-activities/: SKILL.md
plane_agent/skills/plane-work-item-comments/: SKILL.md
plane_agent/skills/plane-work-item-links/: SKILL.md
plane_agent/skills/plane-work-item-properties/: SKILL.md
plane_agent/skills/plane-work-item-relations/: SKILL.md
plane_agent/skills/plane-work-item-types/: SKILL.md
plane_agent/skills/plane-work-items/: SKILL.md
plane_agent/skills/plane-work-logs/: SKILL.md
plane_agent/skills/plane-workspaces/: SKILL.md
scripts/: validate_a2a_agent.py
tests/: test_init.py
