[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plane-agent"
version = "0.1.28"
description = "Plane MCP Agent"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities[agent,logfire]>=0.2.23"]

[project.scripts]
plane-agent = "plane_agent.plane_agent:agent_server"

[tool.setuptools.package-data]
plane_agent = [ "mcp_config.json", "agent/**"]

[tool.setuptools.packages.find]
where = ["."]
